--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         docs-folder: "docs/"
 
     # Building as a epub.
-    - uses: ammaraskar/sphinx-action@master
+    - uses: ammaraskar/sphinx-action@8.1.3
       with:
         build-command: "make epub"
         docs-folder: "docs/"
